--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,10 @@ before_install:
 - ls -l aws-android-sdk-appsync-tests/src/main/res/raw/awsconfiguration.json
 - wc aws-android-sdk-appsync-tests/src/main/res/raw/awsconfiguration.json
 - chmod +x gradlew
-- yes | sdkmanager "platforms;android-28"
-- yes | sdkmanager tools
-- sdkmanager "system-images;android-28;google_apis;x86_64"
+- yes | sdkmanager "platforms;android-27"
 - android list target
-- echo no | avdmanager create avd --force -n test -k "system-images;android-28;google_apis;x86_64"
-- $ANDROID_HOME/emulator/emulator -avd test -no-skin -no-audio -no-window &
+- echo no | android create avd --force -n test -t android-27
+- emulator -avd test -no-skin -no-audio -no-window &
 - android-wait-for-emulator
 - adb -e logcat *:I | tee logcat.log > /dev/null 2>&1 &
 - adb shell input keyevent 82 &
@@ -17,8 +15,11 @@ android:
   components:
   - tools
   - platform-tools
+  - tools
   - build-tools-28.0.2
   - android-28
+  - android-22
+  - sys-img-armeabi-v7a-android-22
 script:
 - ./gradlew publishToMavenLocal
 - cd aws-android-sdk-appsync-tests
