--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
 - chmod +x gradlew
 - yes | sdkmanager "platforms;android-27"
 - android list target
-- echo no | android create avd --force -n test -t android-27
+- echo no | android create avd --force -n test -t android-27 --abi x86
 - emulator -avd test -no-skin -no-audio -no-window &
 - android-wait-for-emulator
 - adb -e logcat *:I | tee logcat.log > /dev/null 2>&1 &
