--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ before_install:
 - wc aws-android-sdk-appsync-tests/src/main/res/raw/awsconfiguration.json
 - chmod +x gradlew
 - yes | sdkmanager "platforms;android-27"
+- yes | sdkmanager "system-images;android-27;google_apis;x86"
 - android list target
-- echo no | android create avd --force -n test -t android-27 --abi x86
+- echo no | android create avd --force -n test -k "system-images;android-27;google_apis;x86"
 - emulator -avd test -no-skin -no-audio -no-window &
 - android-wait-for-emulator
 - adb -e logcat *:I | tee logcat.log > /dev/null 2>&1 &
@@ -16,10 +17,9 @@ android:
   - tools
   - platform-tools
   - tools
-  - build-tools-28.0.2
-  - android-28
+  - build-tools-27.0.3
+  - android-27
   - android-22
-  - sys-img-armeabi-v7a-android-22
 script:
 - ./gradlew publishToMavenLocal
 - cd aws-android-sdk-appsync-tests
