--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 before_install:
-- openssl aes-256-cbc -K $encrypted_db266f166009_key -iv $encrypted_db266f166009_iv -in aws-android-sdk-appsync-tests/src/main/assets/awsconfiguration.json.enc -out aws-android-sdk-appsync-tests/src/main/res/raw/awsconfiguration.json -d
 - ls -l aws-android-sdk-appsync-tests/src/main/res/raw/awsconfiguration.json
 - wc aws-android-sdk-appsync-tests/src/main/res/raw/awsconfiguration.json
 - chmod +x gradlew
 - yes | sdkmanager "platforms;android-27"
-- yes | sdkmanager "system-images;android-27;google_apis;x86"
+- yes | sdkmanager tools
+- sdkmanager "system-images;android-27;google_apis;x86"
 - android list target
-- echo no | android create avd --force -n test -k "system-images;android-27;google_apis;x86"
-- emulator -avd test -no-skin -no-audio -no-window &
+- echo no | avdmanager create avd --force -n test -k "system-images;android-28;google_apis;x86_64"
+- $ANDROID_HOME/emulator/emulator -avd test -no-skin -no-audio -no-window &
 - android-wait-for-emulator
 - adb -e logcat *:I | tee logcat.log > /dev/null 2>&1 &
 - adb shell input keyevent 82 &
