--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ before_install:
 - ls -l aws-android-sdk-appsync-tests/src/main/res/raw/awsconfiguration.json
 - wc aws-android-sdk-appsync-tests/src/main/res/raw/awsconfiguration.json
 - chmod +x gradlew
-- yes | sdkmanager "platforms;android-27"
+- yes | sdkmanager "platforms;android-25"
 - yes | sdkmanager tools
-- sdkmanager "system-images;android-27;google_apis;x86"
+- sdkmanager "system-images;android-25;google_apis;armeabi-v7a"
 - android list target
-- echo no | avdmanager create avd --force -n test -k "system-images;android-27;google_apis;x86"
+- echo no | avdmanager create avd --force -n test -k "system-images;android-25;google_apis;armeabi-v7a"
 - $ANDROID_HOME/emulator/emulator -avd test -no-skin -no-audio -no-window &
 - android-wait-for-emulator
 - adb -e logcat *:I | tee logcat.log > /dev/null 2>&1 &
@@ -17,8 +17,8 @@ android:
   - tools
   - platform-tools
   - tools
-  - build-tools-27.0.3
-  - android-27
+  - build-tools-25.0.3
+  - android-25
   - android-22
 script:
 - ./gradlew publishToMavenLocal
