--- a/aws-android-sdk-appsync-tests/build.gradle
+++ b/aws-android-sdk-appsync-tests/build.gradle
@@ -48,6 +48,7 @@ repositories {
 }
 
 dependencies {
+    androidTestImplementation 'com.android.support:support-compat:28.0.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
     androidTestImplementation 'junit:junit:4.13'
@@ -55,5 +56,6 @@ dependencies {
     androidTestImplementation "com.amazonaws:aws-android-sdk-appsync:$VERSION_NAME"
     androidTestImplementation ("com.amazonaws:aws-android-sdk-mobile-client:$aws_version@aar") { transitive = true }
     androidTestImplementation ("com.amazonaws:aws-android-sdk-auth-userpools:$aws_version@aar") { transitive = true }
+    androidTestImplementation ("com.amazonaws:aws-android-sdk-cognitoauth:$aws_version@aar")
 }
 
