--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
 - chmod +x gradlew
 - yes | sdkmanager "platforms;android-25"
 - android list target
-- echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a
+- echo no | avdmanager create avd -n test --force -k "system-images;android-25;google_apis;armeabi-v7a"
 - emulator -avd test -no-skin -no-audio -no-window &
 - android-wait-for-emulator
 - adb -e logcat *:I | tee logcat.log > /dev/null 2>&1 &
