squashme: More support for plugin
Verified working. Generates Java code from an AppSync GraphQL
introspection schema.json and associated .graphql operation definition
files.

1. Update the Gradle Node Plugin for compatibility with Gradle 6.
2. Remove support for non-Android projects in Gradle script
3. Include Maven Plugins reposistory in project configurations
4. Be defensive when graphql source set is empty

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@ buildscript {
     ext.aws_version = AWS_CORE_SDK_VERSION
 
     repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
         google()
         jcenter()
     }
@@ -15,6 +18,9 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
         google()
         jcenter()
     }
@@ -23,3 +29,4 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
