--- a/aws-android-sdk-appsync-gradle-plugin/build.gradle
+++ b/aws-android-sdk-appsync-gradle-plugin/build.gradle
@@ -13,7 +13,7 @@ dependencies {
 
     compileOnly gradleApi()
     compileOnly localGroovy()
-    implementation "com.moowork.gradle:gradle-node-plugin:1.0.0" // compileOnly
+    implementation 'com.github.node-gradle:gradle-node-plugin:2.2.4'
     implementation 'com.android.tools.build:gradle:3.5.3' // compileOnly
     implementation 'com.squareup.moshi:moshi:1.5.0' // impl
 
@@ -33,3 +33,4 @@ publishing {
 
 sourceCompatibility = "1.7"
 targetCompatibility = "1.7"
+
