fix(aws-android-sdk-appsync-gradle-plugin): Update plugin to support Gradle 6.0 (#301)
Verified working. Generates Java code from an AppSync GraphQL
introspection schema.json and associated .graphql operation definition
files.

1. Update the Gradle Node Plugin for compatibility with Gradle 6.
2. Remove support for non-Android projects in Gradle script
3. Include Maven Plugins repository in project configurations
4. Be defensive when GraphQL source set is empty

Co-authored-by: Jameson Williams <jhwill@amazon.com>

--- a/aws-android-sdk-appsync-gradle-plugin/build.gradle
+++ b/aws-android-sdk-appsync-gradle-plugin/build.gradle
@@ -13,8 +13,8 @@ dependencies {
 
     compileOnly gradleApi()
     compileOnly localGroovy()
-    implementation "com.moowork.gradle:gradle-node-plugin:1.0.0" // compileOnly
-    implementation 'com.android.tools.build:gradle:3.2.1' // compileOnly
+    implementation 'com.github.node-gradle:gradle-node-plugin:2.2.4'
+    implementation 'com.android.tools.build:gradle:3.5.3' // compileOnly
     implementation 'com.squareup.moshi:moshi:1.5.0' // impl
 
     implementation project(':aws-android-sdk-appsync-compiler') // impl
@@ -33,3 +33,4 @@ publishing {
 
 sourceCompatibility = "1.7"
 targetCompatibility = "1.7"
+
