--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,26 @@
 buildscript {
     ext.kotlin_version = '1.3.61'
     ext.aws_version = AWS_CORE_SDK_VERSION
+
     repositories {
+        mavenLocal()
         maven {
             url "https://plugins.gradle.org/m2/"
         }
         google()
         jcenter()
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.amazonaws:aws-android-sdk-appsync-gradle-plugin:2.8.+'
+        //classpath "com.amazonaws:aws-android-sdk-appsync-gradle-plugin:$VERSION_NAME-SNAPSHOT"
     }
 }
 
 allprojects {
     repositories {
+        mavenLocal()
         maven {
             url "https://plugins.gradle.org/m2/"
         }
