--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.amazonaws:aws-android-sdk-appsync-gradle-plugin:$VERSION_NAME"
+        classpath "com.amazonaws:aws-android-sdk-appsync-gradle-plugin:3.1.3"
     }
 }
 
