Migrate project to AndroidX libraries
Task
---
AndroidX has been released a few years ago and most apps have already migrated to use AndroidX libraries.
Currently, many apps have already updated most of their dependencies to newer versions that use AndroidX and want to remove the AndroidX Jetifier process from their build to improve build performance.
The AndroidX Jetifier has performance issues and it's not cachable. It needs to process all dependencies regardless if they were migrated to AndroidX or not. So, this adds significant build time for large projects.

Solution
---
Migrate to AndroidX - update dependencies and imports from `android.support` to `androidx` package using Android Studio's automated refactoring and some manual adjustments.

--- a/gradle.properties
+++ b/gradle.properties
@@ -28,3 +28,7 @@ POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=amazonwebservices
 POM_DEVELOPER_ORGANIZATION=Amazon Web Services
 POM_DEVELOPER_ORGANIZATION_URL=http://aws.amazon.com
+
+# AndroidX
+android.useAndroidX=true
+android.enableJetifier=true
