--- a/aws-android-sdk-appsync-tests/build.gradle
+++ b/aws-android-sdk-appsync-tests/build.gradle
@@ -27,7 +27,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
     buildTypes {
@@ -53,9 +53,9 @@ repositories {
 }
 
 dependencies {
-    androidTestImplementation 'com.android.support:support-compat:28.0.0'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
+    androidTestImplementation 'androidx.core:core:1.0.0'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
     androidTestImplementation 'junit:junit:4.13'
     androidTestImplementation "com.amazonaws:aws-android-sdk-s3:$aws_version"
     androidTestImplementation "com.amazonaws:aws-android-sdk-appsync:$VERSION_NAME"
