--- a/aws-android-sdk-appsync/build.gradle
+++ b/aws-android-sdk-appsync/build.gradle
@@ -53,8 +53,7 @@ dependencies {
     implementation ("com.amazonaws:aws-android-sdk-mobile-client:$aws_version@aar") { transitive = true }
     implementation ("com.amazonaws:aws-android-sdk-auth-userpools:$aws_version@aar") { transitive = true }
 
-    def lifecycle_version = "1.1.1"
-    implementation("android.arch.lifecycle:runtime:$lifecycle_version")
+    implementation 'androidx.lifecycle:lifecycle-runtime:2.0.0'
 }
 
 project.afterEvaluate {
